--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-	<title>Home - GummyBear Admin</title>
+	<title>Home - GummyBear Employee</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
@@ -30,6 +30,9 @@
 				<div class="collapse navbar-collapse" id="topNavbar">
 					<ul class="navbar-nav">
 						<li class="nav-item">
+							<a class="nav-link" th:href="@{/index/}">Home</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" th:href="@{/timeoverview/}">Time Statement</a>
 						</li>
 						<li class="nav-item">
@@ -52,28 +55,63 @@
 	</div>
 	
 	<br>
-	
+
+	<!-- @author: Olga -->
 	<div>
-		<h1>Emplyoee Time Tracking</h1>
+		<h2 style= "color:grey; margin-left: 10px"> Employee Time Tracking</h2>
+		<ul> 
+			<li>
+				<label> First Name: </label>
+				<a sec:authentication="principal.firstname" ></a>
+			</li>
+			
+			<li>
+				<label> Last Name: </label>
+				<a sec:authentication="principal.lastname" ></a>
+			</li>
+			
+			<li>
+				<label> Email: </label>
+				<a sec:authentication="principal.username" ></a>
+			</li>
+			
+			<li>
+				<label> Expected working hours per week: </label>
+				<a sec:authentication="principal.workinghours" ></a>
+			</li>
+		</ul>
 	</div>
+	<!-- -->
+	
+	<hr>
+	<p style="margin-left: 10px;"> Login time: <span id='date-time'> </span>. </p>
+	
 	
 	<div class="text-center">
-  	<h3>Welcome to The Gummy bears</h3>
+		<h3>The GummyBears Company</h3>
   	</div>
 	
 	<!-- Footer -->
 	<div class="text-center">
-		<p> Copyright &copy; GummyBear </p>
+		<p> Copyright &copy; GummyBears </p>
 	</div>
 
-<!-- Logout/Jonas -->	
-<script type="text/javascript">
-	$(document).ready(function() {
-		$("#logoutLink").on("click", function(e) {
-			e.preventDefault();
-			document.logoutForm.submit();
+	<!-- Logout/Jonas -->	
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("#logoutLink").on("click", function(e) {
+				e.preventDefault();
+				document.logoutForm.submit();
+			});
 		});
-	});
-</script>
+	</script>
+	
+	<!-- reference: https://www.howtocodeschool.com/2020/05/display-current-date-and-time-using-html-javascript.html --> 
+	<!-- Display date and time --> 
+	<script>
+		var dt = new Date();
+		document.getElementById('date-time').innerHTML = dt.toLocaleString();
+	</script>
+	
 </body>
 </html>
