--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timeoverview.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timeoverview.html
@@ -28,6 +28,9 @@
 				<div class="collapse navbar-collapse" id="topNavbar">
 					<ul class="navbar-nav">
 						<li class="nav-item">
+							<a class="nav-link" th:href="@{/index/}">Home</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" th:href="@{/timeoverview/}">Time Statement</a>
 						</li>
 						<li class="nav-item">
