--- a/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timetracking.html
+++ b/GummyBearWebParent/GummyBearFrontEnd/src/main/resources/templates/timetracking.html
@@ -33,6 +33,9 @@
 				<div class="collapse navbar-collapse" id="topNavbar">
 					<ul class="navbar-nav">
 						<li class="nav-item">
+							<a class="nav-link" th:href="@{/index/}">Home</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" th:href="@{/timeoverview/}">Time Statement</a>
 						</li>
 						<li class="nav-item">
@@ -54,36 +57,37 @@
 		</div>						
 	</div>
 	
+	<!--
 	<div>
 		<h2 style= "color:grey; margin-left: 10px"> Employee Information</h2>
 	</div>
+	-->
+	<br>
 	
 	<div th:if="${message != null}" class="alert alert-success text-center">
 		[[${message}]]
 	</div>
 	
-	<hr>
-	
 	<div class="text-left">
-		<label style= "color:grey; margin-left: 10px; font-size: 1.2em"> Register Working Hours: </label>
-		
+		<h2 style= "color:grey; margin-left: 10px"> Register Working Hours</h2>
 		<form th:action="@{/checkin}" method="post">
-			<input type="submit" value="Check-In" class="btn btn-success m-1"/> 
+			<input type="submit" value="Check-In" class="btn btn-success m-2"/> 
 		</form>
 		
 		<form th:action="@{/checkout}" method="post">
-			<input type="submit" value="Check-Out" class="btn btn-danger m-1"/> 
+			<input type="submit" value="Check-Out" class="btn btn-danger m-2"/> 
 		</form>
-		
+		<hr>
+		<p style="margin-left: 10px;"> Login time: <span id='date-time'> </span>. </p>
 	</div>
 
 	
 	<div class="text-center">
-		<h3>Welcome to The GummyBear Company</h3>
+		<h3>The GummyBears Company</h3>
   	</div>
 	
 	<div class="text-center">
-		<p> Copyright &copy; GummyBear </p>
+		<p> Copyright &copy; GummyBears </p>
 	</div>
 	
 	<!--TODO: remove script below as not used-->
@@ -96,6 +100,23 @@
 				window.location = "[[@{/}]]";
 			});
 		}); 
+	</script>
+	
+	<!-- reference: https://www.howtocodeschool.com/2020/05/display-current-date-and-time-using-html-javascript.html --> 
+	<!-- Display date and time --> 
+	<script>
+		var dt = new Date();
+		document.getElementById('date-time').innerHTML = dt.toLocaleString();
+	</script>
+	
+	<!-- Logout/Jonas -->	
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("#logoutLink").on("click", function(e) {
+				e.preventDefault();
+				document.logoutForm.submit();
+			});
+		});
 	</script>
 
 </body>
